--- a/src/assets/sass/Cards.scss
+++ b/src/assets/sass/Cards.scss
@@ -1,49 +1,47 @@
-
-
 .cart {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 35px 0px 35px 0px;
-    background-color: #F6F6F6;
-    padding: 62px;
-    border-radius: 10px;
-  
-    .cards {
-      width: calc(33.33% - 20px);
-      margin-bottom: 20px;
-  
-      a {
-        text-decoration: none;
-        color: #000;
-  
-        &:hover {
-          color: #FF6060;
-        }
-  
-        position: relative;
-  
-        h4 {
-          position: absolute;
-          bottom: 10px;
-          left: 10px;
-          margin: 0;
-          color: #fff;
-        }
-  
-        img {
-        width: 100%;
-        height: 340px; // Définir la hauteur souhaitée pour les images
-        object-fit: cover; 
-        border-radius: 8px;
-        }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 35px 0px 35px 0px;
+  background-color: #F6F6F6;
+  padding: 62px;
+  border-radius: 10px;
+  .cards {
+    width: calc(33.33% - 20px);
+    margin-bottom: 20px;
+    a {
+      text-decoration: none;
+      color: #000;
+      &:hover {
+        color: #FF6060;
+      }
+      position: relative;
+      h4 {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        margin: 0;
+        color: #fff;
+      }
+
+      img {
+      width: 100%;
+      height: 340px; // Définir la hauteur souhaitée pour les images
+      object-fit: cover; 
+      border-radius: 8px;
       }
     }
   }
-  
-  
-  
-  
+}
 
-  
+@media (max-width: 768px) {  
+  .cart{
+    background-color: initial;
+    .cards {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
+
+}
