--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -13,7 +13,7 @@ a{
     text-decoration: none;
     color: unset;
 }
-@media (max-width: 640px){
+@media (max-width: 768px){
     body {
         font-size: 16px;
     }
